ex03(kubectl)/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app: dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
